fix spacing between env management toolbar buttons

--- a/packages/common/style/index.css
+++ b/packages/common/style/index.css
@@ -1,4 +1,5 @@
 .jp-NbConda-EnvToolbar {
+  display: flex;
   justify-content: space-evenly;
   box-shadow: none;
 }
